update route change

--- a/roogle/package.json
+++ b/roogle/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/brandonchin00/Final-Project-V2/",
+    "homepage": "https://brandonchin00.github.io/Final-Project-V2/",
     "name": "roogle",
     "version": "0.1.0",
     "private": true,
